<resources>
    <string name="app_name">Attack On Titan</string>
    <string name="character_name">Nama Karakter</string>
    <string name="description">Deskripsi</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about">About</string>
    <string name="name">Orry Frasetyo</string>
    <string name="email">orryfratyo@gmail.com</string>
    <string name="tv_title_description">Deskripsi</string>
    <string name="share">SHARE</string>
    <string name="motto">\"Shinzou Wo Sasageyo\"</string>
    <string-array name="data_name">
        <item>Eren Jaeger</item>
        <item>Levi Ackerman</item>
        <item>Mikasa Ackerman</item>
        <item>Hange Zoe</item>
        <item>Erwin Smith</item>
        <item>Armin Arlet</item>
        <item>Reiner Braun</item>
        <item>Porco Galliard</item>
        <item>Bertholdt Hoover</item>
        <item>Ymir</item>
        <item>Kenny Ackerman</item>
        <item>Jean Kirschtein</item>
        <item>Sasha Braus</item>
        <item>Dot Pyxis</item>
        <item>Historia Reiss</item>

    </string-array>
</resources>